# openagenticskyzer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-26-gui-app.md
docs/superpowers/specs/: 2026-04-26-gui-app-design.md
openagentic_ai/: __main__.py  agent.py  permissions.py
openagentic_ai/app/: main.py  state.py  storage.py
openagentic_ai/app/components/: chat.py  context_bar.py  input_bar.py  model_modal.py  settings.py  sidebar.py
openagentic_ai/context/: messages.py  persistence.py  session_log.py
openagentic_ai/graph/: nodes.py  state.py  workflow.py
openagentic_ai/prompts/: prompt.py
openagentic_ai/tools/: crud_tools.py  internet_search.py  shell_exec.py
openagentic_ai/ui/: tui.py
openagentic_ai/utils/: loop_detector.py  utils.py
tests/: test_context_limit.py  test_deepeval_quality.py  test_loop_detector.py  test_messages.py  test_nodes.py  test_permissions.py  test_persistence.py  test_storage.py  test_utils.py
